src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-omT-ofT-dhF500-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nopen maximized: true\nopen floating: true\ndefault window height: F500\nwant fullscreen: AU"
expression: snapshot
---
initial configure:
size: 0 × 500, bounds: 1280 × 720, states: []

post-map configures:
size: 0 × 500, bounds: 1280 × 720, states: []
size: 1 × 500, bounds: 1280 × 720, states: [Activated]
